--- a/MapBox/mapsindoorsgettingstartedkotlin/build.gradle
+++ b/MapBox/mapsindoorsgettingstartedkotlin/build.gradle
@@ -4,6 +4,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+        storeFile file('/Users/timmikkelsen/Downloads/aau.jks')
+            storePassword 'utXc45ops'
+            keyAlias 'KeyStore'
+            keyPassword 'utXc45ops'
+        }
+    }
     compileSdk 32
 
     defaultConfig {
@@ -14,6 +22,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
@@ -43,7 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.mapspeople.mapsindoors:mapboxsdk:4.0.0-beta.10'
+    implementation 'com.mapspeople.mapsindoors:mapbox:4.0.0-beta.18'
     implementation ('com.mapbox.maps:android:10.6.0'){
         exclude group: 'group_name', module: 'module_name'
     }
