--- a/MapsIndoors_template/app/build.gradle
+++ b/MapsIndoors_template/app/build.gradle
@@ -53,5 +53,5 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-    implementation 'com.mapspeople.mapsindoors:googlemapssdk:4.0.0-beta.13'
+    implementation 'com.mapspeople.mapsindoors:googlemaps:4.0.0-beta.18'
 }
