--- a/MapBox/mapsindoorsgettingstartedbasickotlin/build.gradle
+++ b/MapBox/mapsindoorsgettingstartedbasickotlin/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.mapspeople.mapsindoors:mapbox:4.0.0-beta.18'
+    implementation 'com.mapspeople.mapsindoors:mapbox:4.0.0'
     implementation ('com.mapbox.maps:android:10.6.0'){
         exclude group: 'group_name', module: 'module_name'
     }
