--- a/MapsIndoorsSamples/app/build.gradle
+++ b/MapsIndoorsSamples/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.mapspeople.mapsindoors:googlemaps:4.0.0-beta.18'
+    implementation 'com.mapspeople.mapsindoors:googlemaps:4.0.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
