--- a/MapsIndoors_template_mapbox/app/build.gradle
+++ b/MapsIndoors_template_mapbox/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 
-    implementation 'com.mapspeople.mapsindoors:mapbox:4.0.0-beta.18'
+    implementation 'com.mapspeople.mapsindoors:mapbox:4.0.0'
     repositories {
         maven {
             url 'https://api.mapbox.com/downloads/v2/releases/maven'
