Added MPPositionProvider examples with ciscodna,gps and indooratlas. Also added a reverse geocode example

--- a/MapsIndoorsSamples/settings.gradle
+++ b/MapsIndoorsSamples/settings.gradle
@@ -14,6 +14,9 @@ dependencyResolutionManagement {
         maven {
             url 'https://maven.mapsindoors.com/'
         }
+        maven {
+            url "https://dl.cloudsmith.io/public/indooratlas/mvn-public/maven/"
+        }
         google()
         mavenCentral()
     }
