--- a/Google_Maps/mapsindoorsgettingstartedjava/build.gradle
+++ b/Google_Maps/mapsindoorsgettingstartedjava/build.gradle
@@ -4,12 +4,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 34
+
+    namespace = "com.mapspeople.mapsindoorsgettingstartedjava"
 
     defaultConfig {
         applicationId "com.mapspeople.mapsindoorsgettingstartedjava"
         minSdk 21
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -44,5 +46,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.mapspeople.mapsindoors:googlemaps:4.0.0'
+    implementation 'com.mapspeople.mapsindoors:googlemaps:4.10.0'
 }
