--- a/Google_Maps/mapsindoorsgettingstartedkotlin/build.gradle
+++ b/Google_Maps/mapsindoorsgettingstartedkotlin/build.gradle
@@ -4,12 +4,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 34
+
+    namespace = "com.mapspeople.mapsindoorsgettingstartedkotlin"
 
     defaultConfig {
         applicationId "com.mapspeople.mapsindoorsgettingstartedkotlin"
         minSdk 21
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -38,7 +40,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.mapspeople.mapsindoors:googlemaps:4.0.0'
+    implementation 'com.mapspeople.mapsindoors:googlemaps:4.10.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
